# neonbench

./: CMakeLists.txt  Dockerfile  Makefile  Makefile.linux  Makefile.macos  Makefile.win64  README.md  avx.c  benchmark.cpp  benchmarked-object-float.hpp  benchmarked-object-int.hpp  benchmarked-object.hpp  constants.hpp  device-enum.hpp  docker-entrypoint.sh  neonbench-module.hpp  neonbench-system.hpp  sse.c  stash.c  tools.cpp  tools.hpp
avx/: Makefile  avx512f.c  avx_ex.cpp  avx_ex.h  benchmark.cpp  computation.h  make.sh  sse.c  stash.c
cpu/: CMakeLists.txt  avx.cpp  avx512f.cpp  cpu.hpp  dictionary.hpp  neon.cpp  scalar.cpp  sse.cpp  sve.cpp
cuda/: cuda.cu  kernel.cu  wrapper.hpp
hip/: hip.hip  kernel.hip  wrapper.hpp
opencl/: kernel.cl  opencl.hpp
ram/: ram.hpp
